--- a/styles/layout.css
+++ b/styles/layout.css
@@ -22,7 +22,7 @@ main {
     margin-bottom: 1.5rem;
   }
 
-  & .h1 {
+  & h1 {
     font: 600 1.5rem/1.25 var(--font-family);
     margin-bottom: 0.5rem;
   }
@@ -40,9 +40,10 @@ aside {
     }
   }
 
-  & .h2 {
+  & h2 {
     font: 600 2.5rem/1.25 var(--font-family);
     margin-bottom: 0.5rem;
+    
     & span {
       color: var(--text-highlight);
     }
